force-app/main/default/objects/ticket__c/ticket__c.object-meta.xml
<CustomObject>
    <label>ticket</label>
    <nameField>
        <label>ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>