force-app/main/default/objects/ticket__c/fields/adultseats__c.field-meta.xml
<CustomField>
    <fullName>adultseats__c</fullName>
    <label>adultseats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>