force-app/main/default/objects/ticket__c/fields/childseats__c.field-meta.xml
<CustomField>
    <fullName>childseats__c</fullName>
    <label>childseats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>