force-app/main/default/objects/ticket__c/fields/custname__c.field-meta.xml
<CustomField>
    <fullName>custname__c</fullName>
    <label>custname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>