force-app/main/default/objects/ticket__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>