force-app/main/default/objects/ticket__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>show</label>
    <referenceTo>show__c</referenceTo>
    <relationshipLabel>tickets</relationshipLabel>
    <relationshipName>tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>