force-app/main/default/objects/ticket__c/fields/sumOfseats__c.field-meta.xml
<CustomField>
    <fullName>sumOfseats__c</fullName>
    <formula>adultseats__c  +  childseats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sumOfseats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>