force-app/main/default/objects/ticket__c/fields/totalcost__c.field-meta.xml
<CustomField>
    <fullName>totalcost__c</fullName>
    <formula>(childseats__c  *  price__r.price__c  * 0.75  +  adultseats__c  *  price__r.price__c) * (1 -  discount__c  / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>totalcost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>